grammars/weidu-d/grammar.js
        source_file: ($) => repeat($._d_action),

        _d_action: ($) =>
            choice(
                $.begin_action,
                $.append_action,
                $.extend_action,
                $.chain_action,
                $.interject_action,
                $.interject_copy_trans,
                $.replace_action,
                $.replace_action_text,
                $.replace_action_text_regexp,
                $.replace_action_text_process,
                $.alter_trans,
                $.replace_trans_trigger,
                $.replace_trans_action,
                $.replace_trigger_text,
                $.replace_trigger_text_regexp,
                $.replace_state_trigger,
                $.replace_say,
                $.set_weight,
                $.add_state_trigger,
                $.add_trans_trigger,
                $.add_trans_action,
            ),

        // BEGIN filename [nonPausing] state list
        begin_action: ($) =>
            seq("BEGIN", field("file", $._filename), optional(field("non_pausing", $.number)), repeat($.state)),

        // APPEND [IF_FILE_EXISTS] filename state list END
        append_action: ($) =>
            seq(
                choice("APPEND", "APPEND_EARLY"),
                optional("IF_FILE_EXISTS"),
                field("file", $._filename),
                repeat($.state),
                "END",
            ),

        // EXTEND_TOP/EXTEND_BOTTOM filename stateLabel list [#positionNumber] transition list END
        extend_action: ($) =>
            seq(
                choice("EXTEND_TOP", "EXTEND_BOTTOM"),
                field("file", $._filename),
                field("states", repeat1($._state_label)),
                optional(seq("#", $.number)),
                repeat($.transition),
                "END",
            ),

        // CHAIN [IF [WEIGHT #weight] trigger THEN] [IF_FILE_EXISTS] entryFile entryLabel chainText chainEpilogue
        chain_action: ($) =>
            seq(
                field("keyword", choice("CHAIN", "CHAIN3")),
                optional(
                    seq("IF", optional(seq("WEIGHT", $._weight_value)), field("trigger", $.string), optional("THEN")),
                ),
                optional("IF_FILE_EXISTS"),
                field("file", $._filename),
                field("label", $._state_label),
                repeat($.chain_text),
                $.chain_epilogue,
            ),

        // INTERJECT entryFile entryLabel globalVar chain_speaker* chainEpilogue
        interject_copy_trans: ($) =>
            seq(
                choice(
                    "INTERJECT_COPY_TRANS",
                    "INTERJECT_COPY_TRANS2",
                    "INTERJECT_COPY_TRANS3",
                    "INTERJECT_COPY_TRANS4",
                    // I_C_T[2-4] are WeiDU's documented shorthand aliases for the
                    // INTERJECT_COPY_TRANS[2-4] keywords above (same construct).
                    "I_C_T",
                    "I_C_T2",
                    "I_C_T3",
                    "I_C_T4",
                ),
                optional("SAFE"),
                field("file", $._filename),
                field("label", $._state_label),
                field("global_var", $.identifier),
                repeat($.chain_speaker),
                $.chain_epilogue,
            ),

        // chainText: [IF trigger THEN] sayText [== ... | BRANCH ...]
        chain_text: ($) =>
            seq(
                optional($._if_trigger_then),
                $.say_text,
                optional($.do_feature),
                repeat(choice($.chain_speaker, $.chain_branch)),
            ),

        // == [IF_FILE_EXISTS] fileName [IF trigger [THEN]] sayText [DO action]
        chain_speaker: ($) =>
            seq(
                "==",
                optional("IF_FILE_EXISTS"),
                field("file", $._filename),
                optional($._if_trigger_then),
                $.say_text,
                optional($.do_feature),
            ),

        // BRANCH trigger BEGIN [== fileName [IF trigger THEN] sayText ...] END
        chain_epilogue: ($) =>
            choice(
                seq("END", field("file", $._filename), field("label", $._state_label)),
                seq("EXTERN", field("file", $._filename), field("label", $._state_label)),
                seq(
                    choice("COPY_TRANS", "COPY_TRANS_LATE"),
                    optional("SAFE"),
                    field("file", $._filename),
                    field("label", $._state_label),
                ),
                "EXIT",
                seq("END", repeat($.transition)),
            ),

        // REPLACE filename state list END
        alter_trans: ($) =>
            seq(
                "ALTER_TRANS",
                field("file", $._filename),
                $._state_label_list,
                $._trans_number_list,
                "BEGIN",
                repeat($.alter_trans_change),
                "END",
            ),

        // A change is `field value`, where field is a WeiDU trans field. It is usually a bareword
        // (ACTION, TRIGGER, EPILOGUE, ...) but a quoted "field" form is also accepted.
        alter_trans_change: ($) => seq(choice($.double_string, $.identifier), $.string),

        // Trans replacement actions (using helper)
        replace_trans_trigger: replaceTransAction("REPLACE_TRANS_TRIGGER"),
        replace_trans_action: replaceTransAction("REPLACE_TRANS_ACTION"),

        // REPLACE_TRIGGER_TEXT filename oldText newText [dActionWhen]
        add_state_trigger: ($) =>
            seq(
                "ADD_STATE_TRIGGER",
                field("file", $._filename),
                field("state", $._state_label),
                optional($.d_action_when),
                field("trigger", $.string),
                repeat($._state_label),
            ),

        // ADD_TRANS_TRIGGER filename stateN triggerString [moreStates] [DO transNumbers] [dActionWhen]
        state: ($) =>
            seq(
                "IF",
                optional(seq("WEIGHT", field("weight", $._weight_value))),
                field("trigger", $.string),
                optional("THEN"),
                optional("BEGIN"),
                field("label", $._state_label),
                "SAY",
                field("say", $.say_text),
                repeat($.transition),
                "END",
            ),

        // SAY text [= text ...]
        say_text: ($) => seq($._text, repeat(seq("=", $._text))),

        // Transitions
        transition: ($) => choice($.transition_full, $.transition_short, $.copy_trans, $.macro_expansion),

        // WeiDU macro expansion (bare %var% in transition position)
        transition_full: ($) =>
            seq("IF", field("trigger", $.string), optional("THEN"), repeat($._trans_feature), $._trans_next),

        // + [~trigger~] + replyText transFeatures transNext
        transition_short: ($) =>
            seq(
                "+",
                optional(field("trigger", $.string)),
                "+",
                field("reply", $._text),
                repeat($._trans_feature),
                $._trans_next,
            ),

        // COPY_TRANS [SAFE] filename stateLabel
        copy_trans: ($) =>
            seq(
                choice("COPY_TRANS", "COPY_TRANS_LATE"),
                optional("SAFE"),
                field("file", $._filename),
                field("state", $._state_label),
            ),

        // Transaction features
        _trans_feature: ($) => choice($.reply_feature, $.do_feature, $.journal_feature, $.flags_feature),

        _trans_next: ($) => choice($.goto_next, $.extern_next, $.exit_next, $.short_goto),

        goto_next: ($) => seq("GOTO", field("label", $._state_label)),

        _filename: ($) => choice($.identifier, $.string, $.variable_ref, $.interpolated_name),

        // A name assembled at COMPILE time by concatenating %var% substitutions with abutting
        // literal text, e.g. %tutu_var%KELDDA (the value of tutu_var, then "KELDDA") or
        // TAZOK%eet_var%. WeiDU treats the pieces as one identifier; token.immediate on the
        // continuation keeps them from combining across whitespace (so `%var% NAME` stays two tokens).
        _state_label: ($) => choice($.state_label_alnum, $.identifier, $.variable_ref, $.string),

        // Alphanumeric state label (can start with digit, like "4a", "100", "foo")
        // WeiDU allows # in state labels (e.g., RR#ZA00) but not at start (conflicts with #weight syntax).
        // Dots are valid in labels too (e.g., KHPC1.1, SHRO6.16); `number` is integer-only, so a dotted
        // run is unambiguously a label here, never a float. Hyphens also occur (e.g., Quayle_Shar-Teel_1).
        state_label_alnum: ($) => /[A-Za-z0-9_][A-Za-z0-9_#.-]*/,

        // Weight value: #[-]number
        _weight_value: ($) => seq("#", optional("-"), $.number),

        // BEGIN...END state label list
        _state_label_list: ($) => seq("BEGIN", repeat($._state_label), "END"),

        // BEGIN...END transaction number list
        _trans_number_list: ($) => seq("BEGIN", repeat($.number), "END"),

        // IF trigger [THEN] pattern
        _if_trigger_then: ($) => seq("IF", field("trigger", $.string), optional("THEN")),

        // Text types
        _text: ($) => choice($.string, $.tra_ref, $.tlk_ref, $.at_var_ref),

        // String literals
        string: ($) => choice($.tilde_string, $.double_string),

        tilde_string: ($) => seq("~", optional($.tilde_content), "~"),
        tilde_content: ($) => /[^~]+/,

        double_string: ($) => seq('"', optional($.double_content), '"'),
        double_content: ($) => /[^"]+/,

        // References
        tra_ref: ($) => token(seq("@", /[0-9]+/)),
        identifier: ($) => /[A-Za-z_][A-Za-z0-9_#]*/,
        number: ($) => /[0-9]+/,

        // Comments
