grammars/weidu-d/test/corpus/basics.txt
================================================================================
Simple state
================================================================================

BEGIN file
IF ~trigger~ THEN BEGIN label SAY ~text~ END

--------------------------------------------------------------------------------

(source_file
  (begin_action
    file: (identifier)
    (state
      trigger: (string (tilde_string (tilde_content)))
      label: (state_label_alnum)
      say: (say_text (string (tilde_string (tilde_content)))))))

================================================================================
State with weight
================================================================================

BEGIN file
IF WEIGHT #5 ~trigger~ THEN BEGIN label SAY ~text~ END

--------------------------------------------------------------------------------

(source_file
  (begin_action
    file: (identifier)
    (state
      weight: (number)
      trigger: (string (tilde_string (tilde_content)))
      label: (state_label_alnum)
      say: (say_text (string (tilde_string (tilde_content)))))))

================================================================================
State with negative weight
================================================================================

BEGIN file
IF WEIGHT #-1 ~trigger~ THEN BEGIN label SAY ~text~ END

--------------------------------------------------------------------------------

(source_file
  (begin_action
    file: (identifier)
    (state
      weight: (number)
      trigger: (string (tilde_string (tilde_content)))
      label: (state_label_alnum)
      say: (say_text (string (tilde_string (tilde_content)))))))

================================================================================
State with transition
================================================================================

BEGIN file
IF ~trigger~ THEN BEGIN label SAY ~text~ IF ~reply~ THEN GOTO next END

--------------------------------------------------------------------------------

(source_file
  (begin_action
    file: (identifier)
    (state
      trigger: (string (tilde_string (tilde_content)))
      label: (state_label_alnum)
      say: (say_text (string (tilde_string (tilde_content))))
      (transition
        (transition_full
          trigger: (string (tilde_string (tilde_content)))
          (goto_next
            label: (state_label_alnum)))))))

================================================================================
APPEND action
================================================================================

APPEND filename
IF ~trigger~ THEN BEGIN label SAY ~text~ END
END

--------------------------------------------------------------------------------

(source_file
  (append_action
    file: (identifier)
    (state
      trigger: (string (tilde_string (tilde_content)))
      label: (state_label_alnum)
      say: (say_text (string (tilde_string (tilde_content)))))))

================================================================================
BEGIN action
================================================================================

BEGIN filename
IF ~trigger~ THEN BEGIN label SAY ~text~ END

--------------------------------------------------------------------------------

(source_file
  (begin_action
    file: (identifier)
    (state
      trigger: (string (tilde_string (tilde_content)))
      label: (state_label_alnum)
      say: (say_text (string (tilde_string (tilde_content)))))))

================================================================================
EXTEND_TOP action
================================================================================

EXTEND_TOP filename label
+ ~reply~ + ~text~ GOTO next
END

--------------------------------------------------------------------------------

(source_file
  (extend_action
    file: (identifier)
    states: (state_label_alnum)
    (transition
      (transition_short
        trigger: (string (tilde_string (tilde_content)))
        reply: (string (tilde_string (tilde_content)))
        (goto_next
          label: (state_label_alnum))))))

================================================================================
COPY_TRANS in transition
================================================================================

BEGIN file
IF ~trigger~ THEN BEGIN label SAY ~text~ COPY_TRANS filename label END

--------------------------------------------------------------------------------

(source_file
  (begin_action
    file: (identifier)
    (state
      trigger: (string (tilde_string (tilde_content)))
      label: (state_label_alnum)
      say: (say_text (string (tilde_string (tilde_content))))
      (transition
        (copy_trans
          file: (identifier)
          state: (state_label_alnum))))))

================================================================================
ADD_STATE_TRIGGER with multiple state numbers
================================================================================

ADD_STATE_TRIGGER ~bedwin~ 29 ~Global("ENDOFBG1","GLOBAL",2)~ 31 34 36

--------------------------------------------------------------------------------

(source_file
  (add_state_trigger
    file: (string (tilde_string (tilde_content)))
    state: (state_label_alnum)
    trigger: (string (tilde_string (tilde_content)))
    (state_label_alnum)
    (state_label_alnum)
    (state_label_alnum)))

================================================================================
ALTER_TRANS operation
================================================================================

ALTER_TRANS filename
BEGIN state1 state2 END
BEGIN 0 1 END
BEGIN
  "trigger" ~new_trigger~
END

--------------------------------------------------------------------------------

(source_file
  (alter_trans
    file: (identifier)
    (state_label_alnum)
    (state_label_alnum)
    (number)
    (number)
    (alter_trans_change
      (double_string (double_content))
      (string (tilde_string (tilde_content))))))

================================================================================
I_C_T alias for INTERJECT_COPY_TRANS
================================================================================

I_C_T ~file~ 9 GlobalName
== ~file~ IF ~trigger~ THEN @0
END

--------------------------------------------------------------------------------

(source_file
  (interject_copy_trans
    file: (string (tilde_string (tilde_content)))
    label: (state_label_alnum)
    global_var: (identifier)
    (chain_speaker
      file: (string (tilde_string (tilde_content)))
      trigger: (string (tilde_string (tilde_content)))
      (say_text (tra_ref)))
    (chain_epilogue)))

================================================================================
Dotted state label (KHPC1.1)
================================================================================

BEGIN file
IF ~~ THEN BEGIN KHPC1.1 SAY ~hi~ IF ~~ THEN GOTO KHPC1.1 END

--------------------------------------------------------------------------------

(source_file
  (begin_action
    file: (identifier)
    (state
      trigger: (string (tilde_string))
      label: (state_label_alnum)
      say: (say_text (string (tilde_string (tilde_content))))
      (transition
        (transition_full
          trigger: (string (tilde_string))
          (goto_next
            label: (state_label_alnum)))))))

================================================================================
CHAIN3 (chain variant keyword)
================================================================================

CHAIN3 myfile mylabel
@0
EXIT

--------------------------------------------------------------------------------

(source_file
  (chain_action
    file: (identifier)
    label: (state_label_alnum)
    (chain_text
      (say_text
        (tra_ref)))
    (chain_epilogue)))
